--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </script>
     <!--Hello World Using React-->
     <script>
-        const reactTitle = React.createElement("h1",{id:title},"Hello World!!");
+        const reactTitle = React.createElement("h1",{id:"title"},"Hello World!!");
         const reactRoot = ReactDOM.createRoot(document.getElementById("react"));
         reactRoot.render(reactTitle)
     </script>
