--- a/Assignment-2/src/index.html
+++ b/Assignment-2/src/index.html
@@ -7,6 +7,11 @@
     <title>Assignment-2</title>
 </head>
 <body>
-    
+    <h1>Igniting our App</h1>
+    <div id="root">
+
+    </div>
+    <script type="module" src="./App.js">  
+    </script>    
 </body>
 </html>
